@@ -1,11 +1,14 @@
 package application.com.orangeteam.services;
 
+import application.com.orangeteam.exceptions.CustomerCreateException;
+import application.com.orangeteam.exceptions.CustomerNotFoundException;
 import application.com.orangeteam.models.dtos.CustomerDTO;
 import application.com.orangeteam.models.entities.Customer;
 import application.com.orangeteam.repositories.CustomerRepository;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.BeanUtils;
+import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -16,25 +19,24 @@ import java.util.stream.Collectors;
 public class CustomerServiceImpl implements CustomerService {
 
     private final CustomerRepository customerRepository;
-    private final EmailService emailService;
     private final ObjectMapper objectMapper;
 
-    public CustomerServiceImpl(CustomerRepository customerRepository, EmailService emailService, ObjectMapper objectMapper) {
+    public CustomerServiceImpl(CustomerRepository customerRepository, ObjectMapper objectMapper) {
         this.customerRepository = customerRepository;
-        this.emailService = emailService;
         this.objectMapper = objectMapper;
     }
 
     @Override
     public CustomerDTO createCustomer(CustomerDTO customerDTO) {
         Customer customer = objectMapper.convertValue(customerDTO, Customer.class);
-
-        Customer customerRepositoryEntity = customerRepository.save(customer);
-        log.info("Created customer with id: {}", customerRepositoryEntity.getId());
-        CustomerDTO customerReturnDTO = objectMapper.convertValue(customerRepositoryEntity, CustomerDTO.class);
-        emailService.sendWelcomeEmail(customerReturnDTO);
-
-        return customerReturnDTO;
+        try {
+            Customer customerRepositoryEntity = customerRepository.save(customer);
+            log.info("Created customer with id: {}", customerRepositoryEntity.getId());
+            return objectMapper.convertValue(customerRepositoryEntity, CustomerDTO.class);
+        } catch (DataIntegrityViolationException exception) {
+            log.info("Failed to create new customer. Email or phone number already in use");
+            throw new CustomerCreateException("Email or phone number already in use");
+        }
     }
 
     @Override
@@ -43,30 +45,31 @@ public class CustomerServiceImpl implements CustomerService {
 
         List<CustomerDTO> customerDTOS = customers.stream()
                 .map(customer -> objectMapper.convertValue(customer, CustomerDTO.class))
-                .toList();
+                .collect(Collectors.toList());
 
         return customerDTOS;
     }
 
     @Override
     public CustomerDTO updateCustomer(Long id, CustomerDTO customerDTO) {
-        Customer existongCustomer = customerRepository.findById(id).orElse(null);
-        if (existongCustomer == null) {
-            return null;
+        Customer existingCustomer = customerRepository.findById(id).orElse(null);
+        if (existingCustomer == null) {
+            throw new CustomerNotFoundException("Customer with id " + customerDTO.getId() + " does not exist");
         }
-        BeanUtils.copyProperties(customerDTO, existongCustomer, "id");
-        customerRepository.save(existongCustomer);
+        BeanUtils.copyProperties(customerDTO, existingCustomer, "id");
+        customerRepository.save(existingCustomer);
 
-        return objectMapper.convertValue(existongCustomer, CustomerDTO.class);
+        return objectMapper.convertValue(existingCustomer, CustomerDTO.class);
     }
 
     @Override
-    public Boolean deleteCustomer(Long id) {
-        if (customerRepository.existsById(id)) {
+    public void deleteCustomer(Long id) {
+        Customer existingCustomer = customerRepository.findById(id).orElse(null);
+        if (existingCustomer == null) {
             customerRepository.deleteById(id);
-            return true;
+        } else {
+            throw new CustomerNotFoundException("Customer with id " + id + " does not exist");
         }
-        return false;
     }
 
     @Override
@@ -74,7 +77,8 @@ public class CustomerServiceImpl implements CustomerService {
         Customer existingCustomer = customerRepository.findById(id).orElse(null);
         if (existingCustomer != null) {
             return objectMapper.convertValue(existingCustomer, CustomerDTO.class);
+        } else {
+            throw new CustomerNotFoundException("Customer with id " + id + " does not exist");
         }
-        return null;
     }
 }
